[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/player.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Area2D.Hitbox.gd" type="Script" id=3]
[ext_resource path="res://Sounds/Music/coin_sound.mp3" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24.751, 47.8742 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40.2015, 74.3198 )

[node name="KinematicBody2D" type="KinematicBody2D"]
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 44.1486, 72.7545 )
scale = Vector2( 1.5, 1.5 )
shape = SubResource( 1 )

[node name="HitBox" type="Area2D" parent="."]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 44.2281, 71.2306 )
shape = SubResource( 2 )

[node name="coin_sound" type="AudioStreamPlayer" parent="HitBox"]
stream = ExtResource( 4 )
bus = "Sfx"

[connection signal="area_entered" from="HitBox" to="HitBox" method="_on_HitBox_area_entered"]
[connection signal="body_entered" from="HitBox" to="HitBox" method="_on_HitBox_body_entered"]
